Use explicit locale for string operations in cloud module
Replace platform-dependent string operations with explicit locale-independent
alternatives to avoid bugs when running on systems with different defaults:
- Use StandardCharsets.UTF_8 for byte array to string conversions
- Replace String.formatted() with String.format(Locale.ROOT, ...)
- Use Locale.ROOT for DateTimeFormatter patterns